force-app/main/default/objects/Adherence__c/Adherence__c.object-meta.xml
<CustomObject>
    <label>Adherence</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adherence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>