force-app/main/default/objects/Adherence__c/fields/adherenceEndDate__c.field-meta.xml
<CustomField>
    <fullName>adherenceEndDate__c</fullName>
    <label>adherenceEndDate</label>
    <type>DateTime</type>
</CustomField>