force-app/main/default/objects/Adherence__c/fields/adherenceStartDate__c.field-meta.xml
<CustomField>
    <fullName>adherenceStartDate__c</fullName>
    <label>adherenceStartDate</label>
    <type>DateTime</type>
</CustomField>