force-app/main/default/objects/Adherence__c/fields/AgentDateId__c.field-meta.xml
<CustomField>
    <fullName>AgentDateId__c</fullName>
    <externalId>true</externalId>
    <label>AgentDateId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>