force-app/main/default/objects/Adherence__c/fields/Calabrio_In_Adherence_Time__c.field-meta.xml
<CustomField>
    <fullName>Calabrio_In_Adherence_Time__c</fullName>
    <label>Calabrio In Adherence Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>