force-app/main/default/objects/Adherence__c/fields/Calabrio_Out_of_Adherence_Time__c.field-meta.xml
<CustomField>
    <fullName>Calabrio_Out_of_Adherence_Time__c</fullName>
    <label>Calabrio Out of Adherence Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>