force-app/main/default/objects/Adherence__c/fields/Calabrio_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Calabrio_Person_Email__c</fullName>
    <label>Calabrio Person Email</label>
    <type>Email</type>
</CustomField>