force-app/main/default/objects/Adherence__c/fields/Calabrio_Shift_Date__c.field-meta.xml
<CustomField>
    <fullName>Calabrio_Shift_Date__c</fullName>
    <label>Calabrio Shift Date</label>
    <type>Date</type>
</CustomField>