force-app/main/default/objects/Adherence__c/fields/employeeIdentifier__c.field-meta.xml
<CustomField>
    <fullName>employeeIdentifier__c</fullName>
    <label>employeeIdentifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>