force-app/main/default/objects/Adherence__c/fields/Time_Adhering__c.field-meta.xml
<CustomField>
    <fullName>Time_Adhering__c</fullName>
    <formula>Time_Adhering_Seconds__c  /  Time_Scheduled_Seconds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Adhering %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>