force-app/main/default/objects/Adherence__c/fields/Time_Adhering_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_Adhering_Hours__c</fullName>
    <formula>Time_Adhering_Seconds__c / 3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Adhering (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>