force-app/main/default/objects/Adherence__c/fields/Time_Adhering_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Adhering_Minutes__c</fullName>
    <formula>ROUND( Time_Adhering_Seconds__c / 60,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Adhering (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>