force-app/main/default/objects/Adherence__c/fields/Time_Not_Adhering_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Not_Adhering_Minutes__c</fullName>
    <formula>ROUND( Time_Not_Adhering_Seconds__c / 60,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Not Adhering (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>