force-app/main/default/objects/Adherence__c/fields/Time_Not_Adhering_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Time_Not_Adhering_Seconds__c</fullName>
    <formula>Calabrio_Out_of_Adherence_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Not Adhering (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>