force-app/main/default/objects/Adherence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>employeeIdentifier__c</columns>
    <columns>adherenceStartDate__c</columns>
    <columns>adherenceEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>